<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:context=".about"
    android:backgroundTint="@color/primary_bg_light"
    android:padding="16dp">


    <!-- Maintainer Info -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maintainer_sandesh"
        android:textSize="16sp"
        android:fontFamily="@font/jetbrainsmono"
        android:paddingBottom="16dp" />

    <!-- Links Section -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="@string/links"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Facebook Link -->
    <!-- Facebook Link ImageView -->
    <ImageView
        android:id="@+id/facebook_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:src="@drawable/facebook"
        android:contentDescription="@string/facebook"
        android:clickable="true"
        android:focusable="true" />

    <!-- Instagram Link ImageView -->
    <ImageView
        android:id="@+id/instagram_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:src="@drawable/instagram"
        android:contentDescription="@string/instagram"
        android:clickable="true"
        android:focusable="true" />

    <!-- GitHub Repo ImageView -->
    <ImageView
        android:id="@+id/github_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:src="@drawable/github"
        android:contentDescription="@string/github"
        android:clickable="true"
        android:focusable="true" />


    <!-- Bug/Crash Report -->
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/bug_crash_report"
    android:fontFamily="@font/seg_ui_semibold"
    android:textSize="16sp"
    android:textStyle="bold"
    android:paddingBottom="8dp" />

<TextView
    android:id="@+id/github_link"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/issue"
    android:textColor="@android:color/holo_blue_bright"
    android:clickable="true"
    android:focusable="true"
    android:fontFamily="@font/jetbrainsmono"
    android:textSize="16sp"
    android:paddingBottom="24dp" />

<!-- Check for Update Button -->
<Button
    android:id="@+id/check_update_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/secondary_text"
    android:backgroundTint="@color/button_clr"
    android:text="@string/check_for_update" />

    <TextView
        android:id="@+id/current_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/seg_ui_semibold"
        android:paddingBottom="16dp" />
</LinearLayout>
