<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg_light"
    android:padding="16dp"
    tools:context=".pdf_upload">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jetbrainsmono"
        android:text="@string/upload_pdf_to_server"
        android:textColor="@color/primary_text_light"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/upload_to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jetbrainsmono"
        android:text="@string/upload_file_to"
        android:textColor="@color/primary_text_light"
        android:textSize="16sp"
        android:layout_below="@id/title"
        android:layout_marginTop="32dp"
        android:layout_marginStart="40dp"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/reference_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_toEndOf="@id/upload_to_label"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="319dp"
        android:layout_below="@id/reference_spinner"
        android:contentDescription="@string/pdf"
        android:src="@drawable/pdf"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        />

    <Button
        android:id="@+id/upload_btn"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/button_clr"
        android:fontFamily="@font/jetbrainsmono"
        android:padding="16dp"
        android:text="@string/upload"
        android:textColor="@color/secondary_text"/>

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/jetbrainsmono"
        android:padding="10dp"
        android:text="@string/help_click_on_the_pdf_image_to_select_the_file_to_upload"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
