<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_box"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="8dp" />

    <EditText
        android:id="@+id/resetMail"
        android:autofillHints="emailAddress"
        android:textColorHint="#8a8a8a"
        android:hint="@string/someone_gmail_com"
        android:textColor="@color/text_for_inputs"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/jetbrainsmono"
        android:background="@drawable/rounded_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_clr"
            android:textColor="@color/secondary_text"
            android:fontFamily="@font/jetbrain"
            android:padding="12sp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_clr"
            android:textColor="@color/secondary_text"
            android:fontFamily="@font/jetbrain"
            android:padding="12sp"
            android:text="@string/send"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>
