<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/nav_light">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:text="@string/welcome_back"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/jetbrainsmono"
                android:textColor="@color/primary_text_light"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeText"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:textSize="18sp"
                android:text="@string/we_missed_you_login_to_get_started"
                android:fontFamily="@font/seg_ui_semibold"
                android:textColor="@color/primary_text_light"/>
    </RelativeLayout>

    <RelativeLayout
        android:elevation="30dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/card_background"
        >
        <TextView
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text_light"
            android:textSize="26sp"
            android:text="@string/login"
            android:fontFamily="@font/jetbrainsmono"
            android:layout_marginTop="36dp"
            android:layout_marginStart="48dp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_txt"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            android:text="@string/make_sure_you_have_verified_yout_email_before_logging_in"
            android:fontFamily="@font/segoe_ui_regular"
            android:textColor="@color/primary_text_light"/>



        <LinearLayout
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <EditText
                android:id="@+id/email"
                android:autofillHints="emailAddress"
                android:textColorHint="#8a8a8a"
                android:drawableEnd="@drawable/person"
                android:hint="@string/someone_gmail_com"
                android:textColor="@color/text_for_inputs"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/jetbrainsmono"
                android:background="@drawable/rounded_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"/>
            <EditText
                android:id="@+id/password"
                android:autofillHints="password"
                android:textColorHint="#8a8a8a"
                android:hint="@string/password"
                android:textColor="@color/text_for_inputs"
                android:drawableEnd="@drawable/lock"
                android:layout_marginTop="24dp"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:inputType="textPassword"
                android:fontFamily="@font/jetbrainsmono"
                android:background="@drawable/rounded_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp">
                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text_light"
                    android:textSize="14sp"
                    android:text="@string/forgot_password"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/secondary_text"
                    android:padding="17dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/jetbrainsmono"
                    android:backgroundTint="@color/button_clr"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/google_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/welcome"
            android:src="@drawable/google"
            android:background="@drawable/rounded_box"
            android:backgroundTint="@color/primary_bg_light"
            android:layout_below="@id/txt"
            android:layout_marginStart="180dp"
            android:layout_marginTop="50dp"
            >

        </ImageView>

        <LinearLayout
            android:layout_marginBottom="26dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text_light"
                android:textSize="15sp"
                android:text="@string/don_t_have_an_account"
                android:fontFamily="@font/seg_ui_semibold"
                android:layout_marginStart="12dp" />
            <TextView
                android:id="@+id/tosign"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/button_clr"
                android:textSize="20sp"
                android:text="@string/register"
                android:fontFamily="@font/segoe_ui_bold"
                android:layout_marginStart="12dp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>